<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/flDrawingViewContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:padding="1dp"
        android:background="@drawable/background_drawing_view_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llPaintColors">


        <ImageView
            android:id="@+id/IvBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/drawing_image"
            android:scaleType="centerCrop"
            android:src="@drawable/klcc" />

        <com.example.drawingappkotlin.DrawingView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawingView"
        android:background="#80FFFFFF" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/llPaintColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/llActionButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flDrawingViewContainer">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/black"
            android:background="@color/black"
            android:onClick="paintClicked"
            android:contentDescription="@string/black_paint"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/red"
            android:background="@color/red"
            android:onClick="paintClicked"
            android:contentDescription="@string/red_paint"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/blue"
            android:background="@color/blue"
            android:onClick="paintClicked"
            android:contentDescription="@string/blue_paint"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/yellow"
            android:background="@color/yellow"
            android:onClick="paintClicked"
            android:contentDescription="@string/yellow_paint"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/green"
            android:background="@color/green"
            android:onClick="paintClicked"
            android:contentDescription="@string/green_paint"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/orange"
            android:background="@color/orange"
            android:onClick="paintClicked"
            android:contentDescription="@string/orange_paint"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/purple"
            android:background="@color/purple"
            android:onClick="paintClicked"
            android:contentDescription="@string/purple_paint"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/random"
            android:background="@color/random"
            android:onClick="paintClicked"
            android:contentDescription="@string/random_color_paint"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/white"
            android:background="@color/white"
            android:onClick="paintClicked"
            android:contentDescription="@string/white_paint"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llActionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/llPaintColors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/ibImageGallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/baseline_image_24"
            android:scaleType="fitXY"
            android:contentDescription="@string/add_image_button"/>

    <ImageButton
        android:id="@+id/ibBrush"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:src="@drawable/baseline_brush_24"
        android:scaleType="fitXY"
        android:contentDescription="@string/brush_size_button"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>